--- a/app/views/invoices/_service_invoice_line.erb
+++ b/app/views/invoices/_service_invoice_line.erb
@@ -1,12 +1,10 @@
-<div class="fields">
-  <p>
-    <div class="inline centered_text"><%= f.number_field :qty, :style => "width:50px" %></div>
-        <div class="inline w430"><%= f.collection_select :service_id, ServiceRate.where("active = ?", true).order('description'), :id, :rate_lookup, :include_blank => true %></div>
-        <div class="inline"><%= f.text_field :line_comment, :size => 50 %></div>
-        <div class="inline centered_text"><%= link_to_remove_fields f %></div>
+<tr>
+    <td><%= f.number_field :qty, :class => 'span3' %></td>
+    <td><%= f.collection_select :service_id, ServiceRate.where("active = ?", true).order('description'), :id, :rate_lookup, :include_blank => true %></td>
+    <td><%= f.text_field :line_comment,  :class => "span5" %></td>
+    <td><%= link_to "Remove", '#', class: "remove_fields btn btn-small btn-danger" %></td>
+</tr>
 
-  </p>
-    </div>
 
 
 
