--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,14 +1,4 @@
-<div id="sidebar_left">
-  <%= module_header %>
-  <div class="module">
-    <ul>
-       <li class="exit"><%= link_to (t "global.exit"), invoices_path %></li>
-    </ul>
+<div class="span12">
+    <%= render 'form' %>
 </div>
-  </div>
-<div id="center_col" class="content no_right_sidebar">
-  <div id="show_layout">
-<%= render 'form' %>
-    </div>
-    </div>
 
