To many changes to mention. Mainly UI based and adding some functionalty back into it.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -192,3 +192,13 @@ body { padding-top: 20px; }
 	color:#FFF;
 	background-color:#3C769D;
 }
+
+.ui-widget {
+  font-size: .9em/*{fsDefault}*/ !important;
+}
+
+input,
+textarea,
+.uneditable-input {
+  width: auto;
+}
