--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,64 +1,50 @@
-<% if logged_in? %>
-    <div id="sidebar_left">
-      <%= module_header() %>
-      <div class="module">
-        <ul>
-          <li class="exit">
-            <%= link_to (t "global.exit"), users_path %>
-          </li>
-        </ul>
+<style type="text/css">
+    body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+    }
+</style>
+<h1 class="offset3"><%= t "user.t_new_user" %></h1>
+<div class="span12">
+  <%= simple_form_for @user, :html => { :class => "form-horizontal"} do |f| %>
+      <div class="span5 well">
+        <h4 class="offset4"><%= t("global.required") %></h4>
+        <%= f.input :username, :label => (t "user.username") %>
+        <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
+        <%= f.input :password, :required => true %>
+        <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
+        <%= f.input :email, :label => (t "global.email") %>
+       <hr/>
+        <% if current_user.employee %>
+              <h4 class="offset4"><%= t("role.tab.permissions") %></h4>
+              <%= f.input :client, :as => :radio_buttons, :checked => true, :label =>(t "user.client") %>
+              <%= f.input :employee, :as => :radio_buttons, :checked => [true, false], :label =>(t "user.employed") %>
+              <%= f.input :workorder_assignability, :as => :radio_buttons, :checked => [true, false], :label =>(t "user.assignable") %>
+              <%= f.association :role %>
+        <% end %>
       </div>
-    </div>
-<% end %>
-<div id="center_col">
-  <div id="ddtabs1" class="basictab">
-    <ul>
-      <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="required"><%= (t "products.tab_menu_basic") %></a>
-      </li>
-      <li><a href="#<%= t "users.tab.contact_info" %>" rel="contact"><%= (t "users.tab.contact_info") %></a></li>
-        <li><a href="#<%= t "users.tab.attributes" %>" rel="attributes"><%= (t "users.tab.attributes") %></a></li>
+      <div class="span5 well">
+        <h4 class="offset4"><%= t("global.additional") %></h4>
+        <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
+        <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
+        <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
+        <%= f.input :zip, :input_html => {:size => 30}, :label =>(t "global.zip") %>
+        <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
+        <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
+        <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+        <% if current_user == nil %>
+            <%= hidden_field_tag "user[created_by]", "SELF" %>
+        <% else %>
+            <%= hidden_field_tag "user[created_by]", current_user.username %>
+        <% end %>
+      </div>
 
-    </ul>
-  </div>
-  <div class="tabcontainer">
-    <div id="required" class="tabcontent">
-      <%= simple_form_for(@user) do |f| %>
-          <%= f.error_notification %>
-          <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-          <%= f.input :username, :label => (t "user.username") %>
-          <%= f.input :password, :required => true %>
-          <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
-          <%= f.input :email, :label => (t "global.email") %>
-          <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
-          <div class="center">
-            <%= f.button :submit %>
-          </div>
-    </div>
-    <div id="contact" class="tabcontent simple_form">
-            <%= f.input :address, :input_html => {:rows => 4, :cols => 30}, :label => (t "global.address") %>
-            <%= f.input :city, :label => (t "global.city") %>
-            <%= f.input :zip, :label =>(t "global.zip") %>
-            <%= f.input :state, :label => (t "global.state") %>
-            <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
-            <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+      <div class="form-actions span10">
+        <%= f.submit nil, :class => "btn btn-primary" %>
+        <%= link_to t("global.cancel"), root_path, :class => "btn" %>
+      </div>
 
-            <div class="center">
-              <%= f.button :submit %>
-            </div>
-    </div>
-          <% if logged_in?  %>
-              <% if current_user.employee %>
-                <div id="attributes" class="tabcontent simple_form">
-                    <%= f.input :client, :as => :radio_buttons, :checked => true, :label =>(t "user.client") %>
-                    <%= f.input :employee, :as => :radio_buttons, :checked => [true, false], :label =>(t "user.employed") %>
-                    <%= f.input :workorder_assignability, :as => :radio_buttons, :checked => [true, false], :label =>(t "user.assignable") %>
-                    <%= f.association :role %>
-                  <div class="center">
-                    <%= f.button :submit %>
-                  </div>
-                </div>
-              <% end %>
-          <% end %>
-          <% end %>
-  </div>
+  <% end %>
+</div>
 </div>
