--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -5,7 +5,7 @@
         background-color: #f5f5f5;
       }
     </style>
-<h1 class="offset3"><%= @title %></h1>
+<h1 class="offset3"><%= (t "user.t_new_user") %></h1>
 <div class="span10">
   <%= simple_form_for @user, :html => { :class => "form-horizontal"} do |f| %>
       <div class="span5 well">
