--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,49 +1,55 @@
 <div class="span10">
 <%= simple_form_for @invoice, :html => {:class => "form-horizontal"} do |f| %>
-      <%= "Invoice Due Date:" %><%= f.text_field :due_date %>
-      <h3 align="center">Service Charges</h3>
-      <table id="lines" class="table table-bordered table-condensed">
+      <%= f.text_field :due_date %>
+      <%= f.input :paid %>
+      <div>
+        <h3 align="center">Service Charges</h3>
+        <table id="lines" class="table table-bordered table-condensed">
+          <thead>
+          <tr>
+            <th>Qty</th>
+            <th>Service Rate</th>
+            <th>Line Comments</th>
+            <th>Line Actions</th>
+          </tr>
+          </thead>
 
-        <thead>
-        <tr>
-                  <th>Qty</th>
-                  <th>Service</th>
-                  <th>Line Comments</th>
-                  <th></th>
-                </tr>
-        </thead>
-
-        <tbody>
-        <div>
+          <tbody>
           <%= f.fields_for :service_invoice_lines do |builder| %>
-          <%= render "invoices/service_invoice_line", :f => builder %>
+              <%= render "invoices/service_invoice_line", :f => builder %>
           <% end %>
-          <%= link_to_add_fields "Add New Line", f, :service_invoice_lines %>
+          <%= link_to_add_fields 'Add Services', f, :service_invoice_lines, 'services' %>
+          </tbody>
 
-        </div>
-        </tbody>
-
-      </table>
-
+        </table>
+      </div>
 
 
-   <h3 align="center">Part/Material Charges</h3>
-    <div class="invoice_line_items">
-          <div class="header">
-            <div class="inline w70 centered_text">QTY</div>
-            <div class="inline w430 ">Part/Material</div>
-            <div class="inline  ">Line Comments</div>
-          </div>
-        </div>
-        <div class="table">
-          <%= f.simple_fields_for :product_invoice_lines do |builder| %>
-            <%= render "invoices/product_invoice_line", :f => builder %>
-          <% end %>
-          <p class="w870 centered_text"><%= link_to_add_fields image_tag('add.png', :height => '16', :alt => "Add New Line"), f, :product_invoice_lines %>New Line</p>
-        </div>
-    <HR>
+   <div>
+     <h3 align="center">Part/Material Charges</h3>
+     <table id="lines2" class="table table-bordered table-condensed">
+       <thead>
+       <tr>
+         <th>Qty</th>
+         <th>Parts/Materials Rate</th>
+         <th>Line Comments</th>
+         <th>Line Actions</th>
+       </tr>
+       </thead>
 
-    <%= f.input :paid %>
+       <tbody>
+       <%= f.simple_fields_for :product_invoice_lines do |builder| %>
+           <%= render "invoices/product_invoice_line", :f => builder %>
+       <% end %>
+       <%= link_to_add_fields 'Add Products', f, :product_invoice_lines, 'products' %>
+       </tbody>
+
+     </table>
+   </div>
+
+
+      <%= f.input :invoice_note, :input_html => {:rows => 10, :cols => 100, :value => Setting::default_invoice_note }  %>
+
     <%= f.hidden_field :work_order_id, :value => params[:work_order_id] if params[:work_order_id].present? %>
     <%= f.hidden_field :user_id, :value => params[:user_id] if params[:user_id].present? %>
     <%= f.hidden_field :created_by, :value => current_user.username if @invoice.created_by.blank? %>
@@ -53,7 +59,7 @@
                      <%= f.submit nil, :class => "btn btn-primary" %>
                      <%= link_to t("global.cancel"), invoices_path, :class => "btn" %>
                    </div>
-    <%= f.input :invoice_note, :input_html => {:rows => 5, :cols => 70, :value => Setting::default_invoice_note }  %>
+
 <% end %>
 </div>
 
