--- a/app/views/layouts/_navbar.erb
+++ b/app/views/layouts/_navbar.erb
@@ -3,6 +3,25 @@
     <div class="container">
       <ul class="nav">
         <li><%= link_to "Home", root_path %></li>
+        <!--User Menu-->
+        <% if can? :view, User %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <%= t("user.t_users_account") %>
+                <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Create New", new_user_path if can? :create, User  %></li>
+                <li><%= link_to "Employees", employees_path if can? :manage, User %></li>
+                <% if can? :view, User %>
+                    <li><%= link_to "Clients", clients_path if current_user.employee %></li>
+                    <li><%= link_to "My Account", my_account_path(:id=> current_user) if current_user.client %></li>
+                <% end %>
+              </ul>
+            </li>
+            </li>
+        <% end %>
+        <!--WorkOrder Menu-->
         <% if can? :create, WorkOrder %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -22,6 +41,7 @@
                     </li>
         </li>
         <% end %>
+       <!--Invoice Menu-->
         <% if can? :view, Invoice %>
             <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -42,6 +62,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Business Settings", settings_path if can? :view, Setting %></li>
               <li><%= link_to "Service Rates", service_rates_path if can? :view, ServiceRate %></li>
+              <li><%= link_to "Product List", products_path if can? :view, ServiceRate %></li>
               <li><%= link_to "Priority List", priority_lists_path if can? :view, PriorityList %></li>
               <li><%= link_to "Permissions", permissions_path if can? :view, Permission %></li>
               <li><%= link_to "Roles", roles_path if can? :view, Role %></li>
