--- a/app/views/service_rates/_form.html.erb
+++ b/app/views/service_rates/_form.html.erb
@@ -1,14 +1,5 @@
-<div id="ddtabs1" class="basictab" >
-  <ul>
-  <li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
-  </ul>
-  </div>
-  <div class="tabcontainer">
-  <div id="sc1" class="tabcontent">
-    <%= simple_form_for(@service_rate) do |f| %>
+    <%= simple_form_for @service_rate, :html => { :class => "form-horizontal"} do |f| %>
       <%= f.error_notification %>
-
-      <div class="inputs">
 
         <%= f.input :sku %>
 
@@ -26,12 +17,10 @@
 
         <%= f.input :active %>
 
-      </div>
 
-      <div class="center">
-        <%= f.button :submit %>
-      </div>
+        <div class="form-actions span10">
+          <%= f.submit nil, :class => "btn btn-primary" %>
+          <%= link_to t("global.cancel"), :back, :class => "btn" %>
+        </div>
+
     <% end %>
-  </div>
-
-  </div>
