--- a/app/views/service_rates/index.html.erb
+++ b/app/views/service_rates/index.html.erb
@@ -1,40 +1,39 @@
-<div id="sidebar_left">
-  <%= module_header %>
-  <div class="module">
-    <ul>
-        <li class="create"><%= link_to t("workorder.t_add_new"), new_service_rate_path %></li>
-        <li class="back"><%= link_to t("global.back"), :back %></li>
-    </ul>
+<div class="row-fluid">
+  <div class="span10">
+    <table class="table table-bordered table-hover table table-condensed">
+
+      <thead>
+      <tr>
+        <th>SKU</th>
+        <th>Description</th>
+        <th>Rate</th>
+        <th>Taxable</th>
+        <th>Tax rate</th>
+        <th><%= t "global.active" %></th>
+        <th><%= t "global.actions" %></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @service_rates.each do |service_rate| %>
+          <tr class="<%= cycle :odd, :even %>">
+            <td><%= service_rate.sku %></td>
+            <td><%= service_rate.description %></td>
+            <td><%= number_to_currency(service_rate.rate) %></td>
+            <td><%= service_rate.taxable %></td>
+            <td><%= number_to_percentage(service_rate.tax_rate) %></td>
+            <td><%= service_rate.active %></td>
+            <td>
+              <a class="btn btn-small" href="<%= service_rate %>"><i class="icon-eye-open"></i><%=  t("global.view") %></a>
+              <a class="btn btn-small" href="<%= edit_service_rate_path(service_rate) %>"><i class="icon-icon-edit"></i><%=  t("global.edit") %></a>
+              </td>
+          </tr>
+      <% end %>
+
+      </tbody>
+    </table>
   </div>
-  <%= render 'layouts/left_sidebar_modules' %>
+  <div class="span2">
+    <%= menu_button (t "global.create"), new_service_rate_path, "icon-plus icon-white" %>
+  </div>
 </div>
 
-<div id="center_col" class="no_right_sidebar">
-
-<table id="index_table" >
-  <tr>
-    <th>SKU</th>
-    <th>Description</th>
-    <th>Rate</th>
-    <th>Taxable</th>
-    <th>Tax rate</th>
-    <th>Active</th>
-    <th><%= t "global.actions" %></th>
-  </tr>
-
-<% @service_rates.each do |service_rate| %>
-  <tr align="left" class="<%= cycle :odd, :even %>">
-    <td><%= service_rate.sku %></td>
-    <td><%= service_rate.description %></td>
-    <td><%= number_to_currency(service_rate.rate) %></td>
-    <td><%= service_rate.taxable %></td>
-    <td><%= number_to_percentage(service_rate.tax_rate) %></td>
-    <td><%= service_rate.active %></td>
-    <td width="60"><%= link_to(image_tag('view.png', :title => t("global.view")), service_rate )%>
-        <%= link_to(image_tag('edit.png', :title => t("global.edit")), edit_service_rate_path(service_rate)) %>
-        <%= link_to(image_tag('delete.png', :title => t("global.delete")), service_rate, :confirm => 'Are you sure?', :method => :delete ) %>
-    </td>
-  </tr>
-<% end %>
-</table>
-</div>
