--- a/app/views/service_rates/new.html.erb
+++ b/app/views/service_rates/new.html.erb
@@ -1,22 +1,19 @@
-<div id="sidebar_left">
-  <%= module_header %>
-  <div class="module">
-    <ul>
-        <li class="exit"><%= link_to (t "global.exit"), service_rates_path %></li>
-    </ul>
-  </div>
-  <%= render 'layouts/left_sidebar_modules' %>
-</div>
-<div id="center_col" class="no_right_sidebar">
-  <div id="ddtabs1" class="basictab" >
-  <ul>
-  <li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
-  </ul>
-  </div>
-  <div class="tabcontainer">
+<div class="row-fluid">
+  <div class="span10">
+    <div class="tabbable"> <!-- Only required for left/right tabs -->
+      <ul class="nav nav-tabs">
+        <li class="active"><a href="#basic" data-toggle="tab"><%= t("products.tab_menu_basic") %></a></li>
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane active" id="basic">
+          <p><%= render(:partial => 'form') %></p>
+        </div>
 
-  <div id="sc1" class="tabcontent">
-    <%= render 'form' %>
+      </div>
+    </div>
   </div>
+
+  <div class="span2">
+    <%= menu_button (t "global.exit"), service_rates_path, "icon-pencil icon-white" %>
   </div>
 </div>
