--- a/app/views/users/clients.html.erb
+++ b/app/views/users/clients.html.erb
@@ -1,66 +1,1 @@
-<% if logged_in? %>
-    <div id="sidebar_left">
-      <% if can? :manage, User %>
-          <%= module_header %>
-          <div class="module">
-            <ul>
-              <li class="create"><%= link_to (t "global.new"), new_user_path %></li>
-              <li class="back"><%= link_to (t "global.back"), :back %></li>
-            </ul>
-          </div>
-      <% end %>
-      <%= render 'layouts/left_sidebar_modules' %>
-    </div>
-    <div id="center_col" class="no_right_sidebar content">
-      <% if current_user.employee? && current_user.employee == true %>
-          <br/>
-          <%= form_tag clients_path, :method => 'get' do %>
-              <p><%= t "user.search" %>
-                <%= text_field_tag :search_users, params[:search_users] %>
-                <%= submit_tag (t "global.submit"), :name => nil %>
-              </p>
-          <% end %>
-      <% end %>
-      <% if can? :manage, User %>
-          <%= will_paginate @users %>
-      <% end %>
-      <table id="index_table">
-        <tr>
-          <th><%= t "user.number" %></th>
-          <th><%= sortable "name", (t "user.name") %></th>
-          <th><%= t "user.active_wo" %></th>
-          <th><%= sortable "username", (t "user.username") %></th>
-          <th><%= sortable "email", (t "global.email") %></th>
-          <th><%= t "global.phone" %></th>
-          <th align="center"><%= t "supplier.actions" %></th>
-        </tr>
-        <% for user in @users do %>
-            <tr class="<%= cycle :odd, :even %>">
-              <td><% if user.active? %><%= image_tag "tick.png", :title => (t "global.currently_active") %>&nbsp;<% end %><%= link_to user.id, user %></td>
-              <td><%= user.name %></td>
-              <td align="center"><%= active_work_order_count(user.id).count %></td>
-              <td><%= user.username %></td>
-              <td><%= mail_to user.email %></td>
-              <td><%= user.phone %></td>
-              <td>
-                <%= link_to(image_tag('view.png', :title => (t "global.view")), user) %>
-                <% if can? :update, User %>
-                    &nbsp;<%= link_to(image_tag('edit.png', :title => (t "global.edit")), :controller => "users", :action => "edit", :id => user.id) %>
-                    &nbsp;<%= link_to(image_tag('invoice.png', :title => (t "invoice.create")), new_user_invoice_path(:user_id => user.id) )%>
-                <% end %>
-                    <% if can? :create, WorkOrder %>
-                        &nbsp;<%= link_to(image_tag('wrench.png', :title => (t "global.workorder")), new_user_work_order_path(:user_id => user.id)) %>
-
-                    <% end %>
-                <% if can? :destroy, User %>
-                    &nbsp;<%= link_to(image_tag('delete.png', :title => (t "global.delete")), user, :confirm => 'Are you sure?', :method => :delete) %>
-                <% end %>
-              </td>
-            </tr>
-        <% end %>
-      </table>
-      <% if can? :manage, User %>
-          <%= will_paginate @users %>
-      <% end %>
-<% end %>
-</div>
+<%= render :partial => 'users/user_list' %>
